# drift-lapse

./: .gitignore  LICENSE  README.md  TECHNICAL.md  openapi-spec.yml  rebuild_all.py
.github/workflows/: openapi-doc.yml
diagrams/: 1 - System Context.drawio  2 - Container.drawio  3 - Component.drawio
docs/: index.html
drift_lapse/: openapi-spec.yml  pyproject.toml
drift_lapse/tsp/: package-lock.json
drift_lapse/tsp/common/: models.tsp
drift_lapse/tsp/timelapse/: operations.tsp
emotimo_controller/: openapi-spec.yml  pyproject.toml  rebuild_all.py
emotimo_controller/tsp/: main.tsp  package-lock.json  package.json  tspconfig.yaml
emotimo_controller/tsp/common/: error_models.tsp
emotimo_controller/tsp/emotimo/: models.tsp  operations.tsp
tsp/: main.tsp  package.json  tspconfig.yaml
tsp/common/: error_models.tsp
tsp/emotimo/: operations.tsp
tsp/gopro/: operations.tsp
tsp/track/: models.tsp  operations.tsp
tsp/turret/: models.tsp  operations.tsp
