[project]
name = "drift-lapse"
version = "0.1.0"
description = "A platform to create timelapse videos using a Go Pro and DF3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["datamodel-code-generator>=0.25.6"]


[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "fastapi-code-generator>=0.5.2",
    "mypy>=1.15.0",
    "ruff",
]
