[project]
name = "emotimo-controller"
version = "0.1.0"
description = "Platform to control an Emotimo device"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["datamodel-code-generator>=0.25.6"]


[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "fastapi-code-generator>=0.5.2",
    "mypy>=1.15.0",
    "ruff",
]
